feat: add category pills and search filter to Panels tab (#322)
Panels tab now mirrors Sources tab UX with scrollable category
pills and a text search input. PANEL_CATEGORY_MAP provides
variant-aware groupings (full: 6 categories, tech: 4, finance: 7)
so users can quickly find panels instead of scrolling 50+ items.

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -120,7 +120,24 @@
     "sourceRegionCentralBanks": "البنوك المركزية والاقتصاد",
     "sourceRegionDeals": "الصفقات والشركات",
     "sourceRegionFinRegulation": "التنظيم المالي",
-    "sourceRegionGulfMena": "الخليج والشرق الأوسط"
+    "sourceRegionGulfMena": "الخليج والشرق الأوسط",
+    "filterPanels": "تصفية اللوحات...",
+    "panelCatCore": "أساسي",
+    "panelCatIntelligence": "استخبارات",
+    "panelCatRegionalNews": "أخبار إقليمية",
+    "panelCatMarketsFinance": "الأسواق والمالية",
+    "panelCatTopical": "مواضيع",
+    "panelCatDataTracking": "بيانات وتتبع",
+    "panelCatTechAi": "تكنولوجيا وذكاء اصطناعي",
+    "panelCatStartupsVc": "شركات ناشئة ورأس مال مخاطر",
+    "panelCatSecurityPolicy": "أمن وسياسة",
+    "panelCatMarkets": "الأسواق",
+    "panelCatFixedIncomeFx": "الدخل الثابت والعملات",
+    "panelCatCommodities": "السلع",
+    "panelCatCryptoDigital": "العملات الرقمية",
+    "panelCatCentralBanks": "البنوك المركزية والاقتصاد",
+    "panelCatDeals": "الصفقات والمؤسسات",
+    "panelCatGulfMena": "الخليج والشرق الأوسط"
   },
   "panels": {
     "liveNews": "أخبار مباشرة",
