--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -120,7 +120,24 @@
     "sourceRegionCentralBanks": "Zentralbanken & Wirtschaft",
     "sourceRegionDeals": "Deals & Unternehmen",
     "sourceRegionFinRegulation": "Finanzregulierung",
-    "sourceRegionGulfMena": "Golf & MENA"
+    "sourceRegionGulfMena": "Golf & MENA",
+    "filterPanels": "Panels filtern...",
+    "panelCatCore": "Kern",
+    "panelCatIntelligence": "Nachrichtendienst",
+    "panelCatRegionalNews": "Regionale Nachrichten",
+    "panelCatMarketsFinance": "Märkte & Finanzen",
+    "panelCatTopical": "Themen",
+    "panelCatDataTracking": "Daten & Tracking",
+    "panelCatTechAi": "Tech & KI",
+    "panelCatStartupsVc": "Startups & VC",
+    "panelCatSecurityPolicy": "Sicherheit & Politik",
+    "panelCatMarkets": "Märkte",
+    "panelCatFixedIncomeFx": "Anleihen & Devisen",
+    "panelCatCommodities": "Rohstoffe",
+    "panelCatCryptoDigital": "Krypto & Digital",
+    "panelCatCentralBanks": "Zentralbanken & Wirtschaft",
+    "panelCatDeals": "Deals & Institutionell",
+    "panelCatGulfMena": "Golf & MENA"
   },
   "panels": {
     "liveNews": "Live-Nachrichten",
