--- a/src/locales/el.json
+++ b/src/locales/el.json
@@ -120,7 +120,24 @@
     "sourceRegionCentralBanks": "Central Banks & Economy",
     "sourceRegionDeals": "Deals & Corporate",
     "sourceRegionFinRegulation": "Financial Regulation",
-    "sourceRegionGulfMena": "Gulf & MENA"
+    "sourceRegionGulfMena": "Κόλπος & ΜΕΝΑ",
+    "filterPanels": "Φιλτράρισμα πάνελ...",
+    "panelCatCore": "Βασικά",
+    "panelCatIntelligence": "Πληροφορίες",
+    "panelCatRegionalNews": "Περιφερειακά Νέα",
+    "panelCatMarketsFinance": "Αγορές & Χρηματοοικονομικά",
+    "panelCatTopical": "Θεματικά",
+    "panelCatDataTracking": "Δεδομένα & Παρακολούθηση",
+    "panelCatTechAi": "Τεχνολογία & AI",
+    "panelCatStartupsVc": "Startups & VC",
+    "panelCatSecurityPolicy": "Ασφάλεια & Πολιτική",
+    "panelCatMarkets": "Αγορές",
+    "panelCatFixedIncomeFx": "Σταθερό Εισόδημα & Συνάλλαγμα",
+    "panelCatCommodities": "Εμπορεύματα",
+    "panelCatCryptoDigital": "Κρύπτο & Ψηφιακά",
+    "panelCatCentralBanks": "Κεντρικές Τράπεζες & Οικονομία",
+    "panelCatDeals": "Συμφωνίες & Θεσμικά",
+    "panelCatGulfMena": "Κόλπος & ΜΕΝΑ"
   },
   "panels": {
     "liveNews": "Ζωντανές Ειδήσεις",
