--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -120,7 +120,24 @@
     "sourceRegionCentralBanks": "Bancos Centrales y Economía",
     "sourceRegionDeals": "Operaciones Corporativas",
     "sourceRegionFinRegulation": "Regulación Financiera",
-    "sourceRegionGulfMena": "Golfo y MENA"
+    "sourceRegionGulfMena": "Golfo y MENA",
+    "filterPanels": "Filtrar paneles...",
+    "panelCatCore": "Principal",
+    "panelCatIntelligence": "Inteligencia",
+    "panelCatRegionalNews": "Noticias Regionales",
+    "panelCatMarketsFinance": "Mercados y Finanzas",
+    "panelCatTopical": "Temáticos",
+    "panelCatDataTracking": "Datos y Seguimiento",
+    "panelCatTechAi": "Tech e IA",
+    "panelCatStartupsVc": "Startups y VC",
+    "panelCatSecurityPolicy": "Seguridad y Política",
+    "panelCatMarkets": "Mercados",
+    "panelCatFixedIncomeFx": "Renta Fija y Divisas",
+    "panelCatCommodities": "Materias Primas",
+    "panelCatCryptoDigital": "Cripto y Digital",
+    "panelCatCentralBanks": "Bancos Centrales y Economía",
+    "panelCatDeals": "Operaciones e Institucional",
+    "panelCatGulfMena": "Golfo y MENA"
   },
   "panels": {
     "liveNews": "Noticias en vivo",
