--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -120,7 +120,24 @@
     "sourceRegionCentralBanks": "Banques Centrales et Économie",
     "sourceRegionDeals": "Opérations et Entreprises",
     "sourceRegionFinRegulation": "Régulation Financière",
-    "sourceRegionGulfMena": "Golfe et MENA"
+    "sourceRegionGulfMena": "Golfe et MENA",
+    "filterPanels": "Filtrer les panneaux...",
+    "panelCatCore": "Principal",
+    "panelCatIntelligence": "Renseignement",
+    "panelCatRegionalNews": "Actualités Régionales",
+    "panelCatMarketsFinance": "Marchés & Finance",
+    "panelCatTopical": "Thématiques",
+    "panelCatDataTracking": "Données & Suivi",
+    "panelCatTechAi": "Tech & IA",
+    "panelCatStartupsVc": "Startups & VC",
+    "panelCatSecurityPolicy": "Sécurité & Politique",
+    "panelCatMarkets": "Marchés",
+    "panelCatFixedIncomeFx": "Obligataire & Devises",
+    "panelCatCommodities": "Matières Premières",
+    "panelCatCryptoDigital": "Crypto & Digital",
+    "panelCatCentralBanks": "Banques Centrales & Économie",
+    "panelCatDeals": "Transactions & Institutionnel",
+    "panelCatGulfMena": "Golfe & MENA"
   },
   "panels": {
     "liveNews": "Actualités en direct",
