--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -120,7 +120,24 @@
     "sourceRegionCentralBanks": "Banche Centrali ed Economia",
     "sourceRegionDeals": "Operazioni Societarie",
     "sourceRegionFinRegulation": "Regolamentazione Finanziaria",
-    "sourceRegionGulfMena": "Golfo e MENA"
+    "sourceRegionGulfMena": "Golfo e MENA",
+    "filterPanels": "Filtra pannelli...",
+    "panelCatCore": "Principale",
+    "panelCatIntelligence": "Intelligence",
+    "panelCatRegionalNews": "Notizie Regionali",
+    "panelCatMarketsFinance": "Mercati & Finanza",
+    "panelCatTopical": "Tematici",
+    "panelCatDataTracking": "Dati & Monitoraggio",
+    "panelCatTechAi": "Tech & IA",
+    "panelCatStartupsVc": "Startup & VC",
+    "panelCatSecurityPolicy": "Sicurezza & Politica",
+    "panelCatMarkets": "Mercati",
+    "panelCatFixedIncomeFx": "Reddito Fisso & Valute",
+    "panelCatCommodities": "Materie Prime",
+    "panelCatCryptoDigital": "Crypto & Digitale",
+    "panelCatCentralBanks": "Banche Centrali & Economia",
+    "panelCatDeals": "Operazioni & Istituzionale",
+    "panelCatGulfMena": "Golfo & MENA"
   },
   "panels": {
     "liveNews": "Notizie in diretta",
