--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -120,7 +120,24 @@
     "sourceRegionCentralBanks": "中央銀行・経済",
     "sourceRegionDeals": "M&A・企業",
     "sourceRegionFinRegulation": "金融規制",
-    "sourceRegionGulfMena": "湾岸・中東"
+    "sourceRegionGulfMena": "湾岸・中東",
+    "filterPanels": "パネルを絞り込む...",
+    "panelCatCore": "コア",
+    "panelCatIntelligence": "インテリジェンス",
+    "panelCatRegionalNews": "地域ニュース",
+    "panelCatMarketsFinance": "市場・金融",
+    "panelCatTopical": "トピック",
+    "panelCatDataTracking": "データ・追跡",
+    "panelCatTechAi": "テック・AI",
+    "panelCatStartupsVc": "スタートアップ・VC",
+    "panelCatSecurityPolicy": "安全保障・政策",
+    "panelCatMarkets": "市場",
+    "panelCatFixedIncomeFx": "債券・為替",
+    "panelCatCommodities": "コモディティ",
+    "panelCatCryptoDigital": "暗号通貨・デジタル",
+    "panelCatCentralBanks": "中央銀行・経済",
+    "panelCatDeals": "ディール・機関投資",
+    "panelCatGulfMena": "湾岸・中東"
   },
   "panels": {
     "liveNews": "ライブニュース",
