--- a/src/locales/nl.json
+++ b/src/locales/nl.json
@@ -1793,7 +1793,24 @@
     "sourceRegionCentralBanks": "Central Banks & Economy",
     "sourceRegionDeals": "Deals & Corporate",
     "sourceRegionFinRegulation": "Financial Regulation",
-    "sourceRegionGulfMena": "Gulf & MENA"
+    "sourceRegionGulfMena": "Golf & MENA",
+    "filterPanels": "Panels filteren...",
+    "panelCatCore": "Kern",
+    "panelCatIntelligence": "Inlichtingen",
+    "panelCatRegionalNews": "Regionaal Nieuws",
+    "panelCatMarketsFinance": "Markten & Financiën",
+    "panelCatTopical": "Actueel",
+    "panelCatDataTracking": "Data & Tracking",
+    "panelCatTechAi": "Tech & AI",
+    "panelCatStartupsVc": "Startups & VC",
+    "panelCatSecurityPolicy": "Veiligheid & Beleid",
+    "panelCatMarkets": "Markten",
+    "panelCatFixedIncomeFx": "Vastrentend & Valuta",
+    "panelCatCommodities": "Grondstoffen",
+    "panelCatCryptoDigital": "Crypto & Digitaal",
+    "panelCatCentralBanks": "Centrale Banken & Economie",
+    "panelCatDeals": "Deals & Institutioneel",
+    "panelCatGulfMena": "Golf & MENA"
   },
   "app": {
     "title": "World Monitor",
