--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -120,7 +120,24 @@
     "sourceRegionCentralBanks": "Central Banks & Economy",
     "sourceRegionDeals": "Deals & Corporate",
     "sourceRegionFinRegulation": "Financial Regulation",
-    "sourceRegionGulfMena": "Gulf & MENA"
+    "sourceRegionGulfMena": "Zatoka & MENA",
+    "filterPanels": "Filtruj panele...",
+    "panelCatCore": "Główne",
+    "panelCatIntelligence": "Wywiad",
+    "panelCatRegionalNews": "Wiadomości Regionalne",
+    "panelCatMarketsFinance": "Rynki & Finanse",
+    "panelCatTopical": "Tematyczne",
+    "panelCatDataTracking": "Dane & Śledzenie",
+    "panelCatTechAi": "Tech & AI",
+    "panelCatStartupsVc": "Startupy & VC",
+    "panelCatSecurityPolicy": "Bezpieczeństwo & Polityka",
+    "panelCatMarkets": "Rynki",
+    "panelCatFixedIncomeFx": "Obligacje & Waluty",
+    "panelCatCommodities": "Surowce",
+    "panelCatCryptoDigital": "Krypto & Cyfrowe",
+    "panelCatCentralBanks": "Banki Centralne & Gospodarka",
+    "panelCatDeals": "Transakcje & Instytucjonalne",
+    "panelCatGulfMena": "Zatoka & MENA"
   },
   "panels": {
     "liveNews": "Wiadomości na żywo",
