--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -1793,7 +1793,24 @@
     "sourceRegionCentralBanks": "Central Banks & Economy",
     "sourceRegionDeals": "Deals & Corporate",
     "sourceRegionFinRegulation": "Financial Regulation",
-    "sourceRegionGulfMena": "Gulf & MENA"
+    "sourceRegionGulfMena": "Golfo & MENA",
+    "filterPanels": "Filtrar painéis...",
+    "panelCatCore": "Principal",
+    "panelCatIntelligence": "Inteligência",
+    "panelCatRegionalNews": "Notícias Regionais",
+    "panelCatMarketsFinance": "Mercados & Finanças",
+    "panelCatTopical": "Temáticos",
+    "panelCatDataTracking": "Dados & Rastreamento",
+    "panelCatTechAi": "Tech & IA",
+    "panelCatStartupsVc": "Startups & VC",
+    "panelCatSecurityPolicy": "Segurança & Política",
+    "panelCatMarkets": "Mercados",
+    "panelCatFixedIncomeFx": "Renda Fixa & Câmbio",
+    "panelCatCommodities": "Commodities",
+    "panelCatCryptoDigital": "Cripto & Digital",
+    "panelCatCentralBanks": "Bancos Centrais & Economia",
+    "panelCatDeals": "Negócios & Institucional",
+    "panelCatGulfMena": "Golfo & MENA"
   },
   "app": {
     "title": "World Monitor",
