--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -120,7 +120,24 @@
     "sourceRegionCentralBanks": "Центробанки и экономика",
     "sourceRegionDeals": "Сделки и корпорации",
     "sourceRegionFinRegulation": "Финансовое регулирование",
-    "sourceRegionGulfMena": "Залив и БВСА"
+    "sourceRegionGulfMena": "Залив и БВСА",
+    "filterPanels": "Фильтр панелей...",
+    "panelCatCore": "Основные",
+    "panelCatIntelligence": "Разведка",
+    "panelCatRegionalNews": "Региональные новости",
+    "panelCatMarketsFinance": "Рынки и финансы",
+    "panelCatTopical": "Тематические",
+    "panelCatDataTracking": "Данные и отслеживание",
+    "panelCatTechAi": "Технологии и ИИ",
+    "panelCatStartupsVc": "Стартапы и венчур",
+    "panelCatSecurityPolicy": "Безопасность и политика",
+    "panelCatMarkets": "Рынки",
+    "panelCatFixedIncomeFx": "Облигации и валюта",
+    "panelCatCommodities": "Сырьё",
+    "panelCatCryptoDigital": "Крипто и цифровые активы",
+    "panelCatCentralBanks": "Центробанки и экономика",
+    "panelCatDeals": "Сделки и институционалы",
+    "panelCatGulfMena": "Залив и БВСА"
   },
   "panels": {
     "liveNews": "Новости в реальном времени",
