--- a/src/locales/sv.json
+++ b/src/locales/sv.json
@@ -1793,7 +1793,24 @@
     "sourceRegionCentralBanks": "Central Banks & Economy",
     "sourceRegionDeals": "Deals & Corporate",
     "sourceRegionFinRegulation": "Financial Regulation",
-    "sourceRegionGulfMena": "Gulf & MENA"
+    "sourceRegionGulfMena": "Gulfen & MENA",
+    "filterPanels": "Filtrera paneler...",
+    "panelCatCore": "Kärna",
+    "panelCatIntelligence": "Underrättelser",
+    "panelCatRegionalNews": "Regionala Nyheter",
+    "panelCatMarketsFinance": "Marknader & Finans",
+    "panelCatTopical": "Aktuellt",
+    "panelCatDataTracking": "Data & Spårning",
+    "panelCatTechAi": "Tech & AI",
+    "panelCatStartupsVc": "Startups & VC",
+    "panelCatSecurityPolicy": "Säkerhet & Politik",
+    "panelCatMarkets": "Marknader",
+    "panelCatFixedIncomeFx": "Räntor & Valuta",
+    "panelCatCommodities": "Råvaror",
+    "panelCatCryptoDigital": "Krypto & Digitalt",
+    "panelCatCentralBanks": "Centralbanker & Ekonomi",
+    "panelCatDeals": "Affärer & Institutionellt",
+    "panelCatGulfMena": "Gulfen & MENA"
   },
   "app": {
     "title": "World Monitor",
