--- a/src/locales/th.json
+++ b/src/locales/th.json
@@ -120,7 +120,24 @@
     "sourceRegionCentralBanks": "Central Banks & Economy",
     "sourceRegionDeals": "Deals & Corporate",
     "sourceRegionFinRegulation": "Financial Regulation",
-    "sourceRegionGulfMena": "Gulf & MENA"
+    "sourceRegionGulfMena": "อ่าวเปอร์เซีย & MENA",
+    "filterPanels": "กรองแผงควบคุม...",
+    "panelCatCore": "หลัก",
+    "panelCatIntelligence": "ข่าวกรอง",
+    "panelCatRegionalNews": "ข่าวภูมิภาค",
+    "panelCatMarketsFinance": "ตลาด & การเงิน",
+    "panelCatTopical": "ตามหัวข้อ",
+    "panelCatDataTracking": "ข้อมูล & การติดตาม",
+    "panelCatTechAi": "เทคโนโลยี & AI",
+    "panelCatStartupsVc": "สตาร์ทอัพ & VC",
+    "panelCatSecurityPolicy": "ความมั่นคง & นโยบาย",
+    "panelCatMarkets": "ตลาด",
+    "panelCatFixedIncomeFx": "ตราสารหนี้ & อัตราแลกเปลี่ยน",
+    "panelCatCommodities": "สินค้าโภคภัณฑ์",
+    "panelCatCryptoDigital": "คริปโต & ดิจิทัล",
+    "panelCatCentralBanks": "ธนาคารกลาง & เศรษฐกิจ",
+    "panelCatDeals": "ดีล & สถาบัน",
+    "panelCatGulfMena": "อ่าวเปอร์เซีย & MENA"
   },
   "panels": {
     "liveNews": "ข่าวสด",
