--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -120,7 +120,24 @@
     "sourceRegionCentralBanks": "Central Banks & Economy",
     "sourceRegionDeals": "Deals & Corporate",
     "sourceRegionFinRegulation": "Financial Regulation",
-    "sourceRegionGulfMena": "Gulf & MENA"
+    "sourceRegionGulfMena": "Körfez & MENA",
+    "filterPanels": "Panelleri filtrele...",
+    "panelCatCore": "Temel",
+    "panelCatIntelligence": "İstihbarat",
+    "panelCatRegionalNews": "Bölgesel Haberler",
+    "panelCatMarketsFinance": "Piyasalar & Finans",
+    "panelCatTopical": "Güncel",
+    "panelCatDataTracking": "Veri & Takip",
+    "panelCatTechAi": "Teknoloji & YZ",
+    "panelCatStartupsVc": "Girişimler & GS",
+    "panelCatSecurityPolicy": "Güvenlik & Politika",
+    "panelCatMarkets": "Piyasalar",
+    "panelCatFixedIncomeFx": "Sabit Getiri & Döviz",
+    "panelCatCommodities": "Emtialar",
+    "panelCatCryptoDigital": "Kripto & Dijital",
+    "panelCatCentralBanks": "Merkez Bankaları & Ekonomi",
+    "panelCatDeals": "Anlaşmalar & Kurumsal",
+    "panelCatGulfMena": "Körfez & MENA"
   },
   "panels": {
     "liveNews": "Canli Haberler",
