--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -120,7 +120,24 @@
     "sourceRegionCentralBanks": "Central Banks & Economy",
     "sourceRegionDeals": "Deals & Corporate",
     "sourceRegionFinRegulation": "Financial Regulation",
-    "sourceRegionGulfMena": "Gulf & MENA"
+    "sourceRegionGulfMena": "Vùng Vịnh & MENA",
+    "filterPanels": "Lọc bảng điều khiển...",
+    "panelCatCore": "Cốt lõi",
+    "panelCatIntelligence": "Tình báo",
+    "panelCatRegionalNews": "Tin khu vực",
+    "panelCatMarketsFinance": "Thị trường & Tài chính",
+    "panelCatTopical": "Chủ đề",
+    "panelCatDataTracking": "Dữ liệu & Theo dõi",
+    "panelCatTechAi": "Công nghệ & AI",
+    "panelCatStartupsVc": "Khởi nghiệp & VC",
+    "panelCatSecurityPolicy": "An ninh & Chính sách",
+    "panelCatMarkets": "Thị trường",
+    "panelCatFixedIncomeFx": "Thu nhập cố định & Ngoại hối",
+    "panelCatCommodities": "Hàng hóa",
+    "panelCatCryptoDigital": "Tiền mã hóa & Kỹ thuật số",
+    "panelCatCentralBanks": "Ngân hàng Trung ương & Kinh tế",
+    "panelCatDeals": "Giao dịch & Tổ chức",
+    "panelCatGulfMena": "Vùng Vịnh & MENA"
   },
   "panels": {
     "liveNews": "Tin tức Trực tiếp",
