--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -120,7 +120,24 @@
     "sourceRegionCentralBanks": "央行与经济",
     "sourceRegionDeals": "交易与企业",
     "sourceRegionFinRegulation": "金融监管",
-    "sourceRegionGulfMena": "海湾与中东"
+    "sourceRegionGulfMena": "海湾与中东",
+    "filterPanels": "筛选面板...",
+    "panelCatCore": "核心",
+    "panelCatIntelligence": "情报",
+    "panelCatRegionalNews": "地区新闻",
+    "panelCatMarketsFinance": "市场与金融",
+    "panelCatTopical": "专题",
+    "panelCatDataTracking": "数据与追踪",
+    "panelCatTechAi": "科技与AI",
+    "panelCatStartupsVc": "创业与风投",
+    "panelCatSecurityPolicy": "安全与政策",
+    "panelCatMarkets": "市场",
+    "panelCatFixedIncomeFx": "固定收益与外汇",
+    "panelCatCommodities": "大宗商品",
+    "panelCatCryptoDigital": "加密与数字资产",
+    "panelCatCentralBanks": "央行与经济",
+    "panelCatDeals": "交易与机构",
+    "panelCatGulfMena": "海湾与中东"
   },
   "panels": {
     "liveNews": "实时新闻",
