feat: add Japan Monitor variant with 11 feed categories
- Add 'japan' to recognized variants in config/variant.ts
- Add JAPAN_FEEDS with 11 categories (Politics, Economy, Tech, Security,
  Disaster, Society, Defense, Diplomacy, Energy, Transport, Finance)
- Add JAPAN_PANELS, JAPAN_MAP_LAYERS, and category mappings in config/panels.ts
- Add Japanese source tiers in config/feeds.ts (NHK, Nikkei, Mainichi, etc.)
- Add Japan-specific locale strings in en.json and ja.json
- Add japan variant route in vite.config.ts
- Add i18n support for Japan Monitor in services/i18n.ts

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -89,6 +89,7 @@
     "filterSources": "Filter sources...",
     "sourcesEnabled": "{{enabled}}/{{total}} enabled",
     "finance": "FINANCE",
+    "japan": "JAPAN",
     "toggleTheme": "Toggle dark/light mode",
     "panelDisplayCaption": "Choose which panels to show on the dashboard",
     "tabGeneral": "General",
@@ -137,7 +138,11 @@
     "panelCatCryptoDigital": "Crypto & Digital",
     "panelCatCentralBanks": "Central Banks & Econ",
     "panelCatDeals": "Deals & Institutional",
-    "panelCatGulfMena": "Gulf & MENA"
+    "panelCatGulfMena": "Gulf & MENA",
+    "panelCatJapanCore": "Japan News",
+    "panelCatJapanGeopolitics": "Geopolitics & Security",
+    "panelCatJapanEconomy": "Economy & Markets",
+    "panelCatJapanTech": "Technology & More"
   },
   "panels": {
     "liveNews": "Live News",
@@ -742,7 +747,8 @@
         "asia": "Asia",
         "latam": "Latin America",
         "africa": "Africa",
-        "oceania": "Oceania"
+        "oceania": "Oceania",
+        "japan": "Japan"
       },
       "layers": {
         "startupHubs": "Startup Hubs",
